[package]
name = "anchor-vault-q3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_vault_q3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
mollusk-svm = "~0.4.0"
solana-program = "~2.3.0"
